# hitalent-test-assignment

./: .env.example  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: ci.yaml
src/: config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2026_02_19_0001-001_create_departments_and_employees.py
src/api/: __init__.py  decorators.py  departments.py  employees.py  exception_handlers.py
src/db/: __init__.py  base.py  department_repository.py  employee_repository.py
src/dependencies/: __init__.py
src/models/: __init__.py  department.py  employee.py
src/schemas/: __init__.py  common.py  department.py  employee.py
src/services/: __init__.py  decorators.py  department_service.py  employee_service.py  exceptions.py
test-reports/: report.html
tests/: conftest.py  test_department_repository.py  test_department_service.py  test_departments_api.py  test_employee_repository.py  test_employee_service.py  test_employees_api.py
